# LitheServer

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
litheserver/: __init__.py  __main__.py  server.py
quickserver/: __init__.py  __main__.py  server.py
syntax_test/: config.yaml  data.json  example.c  example.cpp  example.html  example.js  example.md  example.py  example.ts  script.sh  styles.css
